--- a/Python_Mysql.ipynb
+++ b/Python_Mysql.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,27 +230,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "('algo',)\n",
       "('course',)\n",
       "('dashboarddb',)\n",
-      "('infodb',)\n",
+      "('hospital',)\n",
+      "('ig_clone',)\n",
       "('information_schema',)\n",
       "('learning_model',)\n",
       "('my_db',)\n",
       "('my_sql_course',)\n",
       "('mysql',)\n",
+      "('parameter_examples',)\n",
       "('performance_schema',)\n",
       "('product_db',)\n",
       "('quiz_app',)\n",
       "('sql_course',)\n",
       "('sys',)\n",
       "('table_db',)\n",
+      "('taskdb',)\n",
+      "('testdb',)\n",
       "('testing',)\n",
       "('users',)\n"
      ]
